# QtProjects

./: Learnings.txt  README.txt
ARCH/MulticastReceiver/: CMakeLists.txt  MulticastReceiver_global.h  iMulticastReceiver.h  multicastreceiver.cpp  multicastreceiver.h
ARCH/MulticastSender/: CMakeLists.txt  MulticastSender_global.h  imulticastsender.h  multicastsender.cpp  multicastsender.h  node_config.xml  res.qrc
ARCH/MuticastSenderStub/: CMakeLists.txt  Main.qml  MulticastSender.cpp  MulticastSender.h  main.cpp  node_config.xml  res.qrc
ARCH/PopUp/: CMakeLists.txt  popupclass.h
ARCH/PopUp2/: popup2.cpp  res.qrc
ARCH/PopUp4/: CMakeLists.txt  PopUp4.qml  PopUp4_global.h
ARCH/Popup3/: CMakeLists.txt  res.qrc
ARCH/SharedDataModel/: SharedDataModel_global.h  shareddatamodel.cpp  shareddatamodel.h
ARCH/SmartFooter/: FooterWindow.qml  smartfooter.cpp  smartfooter.h
ARCH/SmartHeader/: CMakeLists.txt  DataManager.cpp  DataManager.h  HeaderWindow.qml  SmartHeader_global.h  iheaderinterface.h  res.qrc  smartheader.cpp  smartheader.h
ARCH/SmartMainLibrary/: CMakeLists.txt  ComponentConfig.xml  EventManager.qml  FunctionKeyPanel.xml  FunctionKeyPanelV2.xml  KeyManager.cpp  KeyManager.h  LayoutConfig.xml  SmartMainLibraryWindow.qml  componentmanager.cpp  componentmanager.h  res.qrc  shareddatamodel.h  smartmainlibrary.cpp  smartmainlibrary.h
ARCH/SmartMainScreen/: CMakeLists.txt  MainScreenWindow.qml  imainscreeninterface.h  res.qrc  smartmainscreen.cpp  smartmainscreen.h
ComboBox/: CMakeLists.txt  CentralDataProvider.h  ExpandableSection.qml  FunctionKeyPanel.xml  main.cpp  main.qml  treeitem.h
CustomFontAddition/: CMakeLists.txt  Main.qml  main.cpp  res.qrc
DynamicLoading2jan2025/PopUp/: PopUp.qml  PopUp_global.h  popupclass.cpp  res.qrc
DynamicLoading2jan2025/PopUp2/: CMakeLists.txt  PopUp2.qml  PopUp2_global.h  popup2.h
DynamicLoading2jan2025/PopUp4/: popup4.cpp  popup4.h  res.qrc
DynamicLoading2jan2025/Popup3/: PopUp3.qml  Popup3_global.h  popup3.cpp  popup3.h
DynamicLoading2jan2025/SharedDataModel/: CMakeLists.txt  shareddatamodel.h
DynamicLoading2jan2025/SmartFooter/: CMakeLists.txt  FooterWindow.qml  SmartFooter_global.h  ifooterinterface.h  res.qrc  smartfooter.cpp  smartfooter.h
DynamicLoading2jan2025/SmartHeader/: CMakeLists.txt  HeaderWindow.qml  smartheader.cpp  smartheader.h
DynamicLoading2jan2025/SmartMainLibrary/: CMakeLists.txt  ComponentConfig.xml  SmartMainLibraryWindow.qml  SmartMainLibrary_global.h  ismartmainlibraryinterface.h  res.qrc  shareddatamodel.cpp  smartmainlibrary.cpp  smartmainlibrary.h
DynamicLoading2jan2025/SmartMainLibrary/lib/: globalinterface.h  isharedmodelinterface.h
DynamicLoading2jan2025/SmartMainScreen/: CMakeLists.txt  MainScreenWindow.qml  SmartMainScreen_global.h  smartmainscreen.cpp  smartmainscreen.h
Filter/: CMakeLists.txt  Main.qml  main.cpp  res.qrc
Forms/: CMakeLists.txt  formdatahandler.cpp  formdatahandler.h  formdataprovider.cpp  formdataprovider.h  main.cpp  main.qml
Layout/: AnchorUtil.js  CMakeLists.txt  Main.qml  ZoneLoader.cpp  ZoneLoader.h  Zones.xml  main.cpp  res.qrc
Notifications/: AllNotification.qml  CMakeLists.txt  Main.qml  MyExpandableSection.qml  NotificationManger.cpp  NotificationManger.h  NotificationModel.cpp  NotificationModel.h  UnseenNotificationModel.cpp  UnseenNotificationModel.h  main.cpp  main.qml  res.qrc
ParseTree/: ActionEventManager.cpp  ActionEventManager.h  CMakeLists.txt  ExposedObjectRegistry.cpp  ExposedObjectRegistry.h  FunctionKeyPanelV2.xml  TreeNavigator.cpp  TreeNavigator.h  main.cpp  main.qml
ProgressBar/: CMakeLists.txt  main.cpp  main.qml
TrackModel/: CMakeLists.txt  CentralDataProvider.cpp  ExpandableSection.qml  Main.qml  main.cpp
WaterFall/: CMakeLists.txt  ChartManager.cpp  ChartManager.h  WaterFallConstants.cpp  WaterFallConstants.h  WaterFallDataModel.cpp  WaterFallDataModel.h  main.cpp
WaterFall/qml/: Main.qml  MouseTrackerTooltip.qml  RangeSliderVersions.qml  TrackLabel.qml
WaterfallAnimation/: CMakeLists.txt  main.cpp  mainBk.qml
applauncher/: AppLaunchManager.cpp  AppLaunchManager.h
